--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@prisma/client": "^6.15.0",
+    "@prisma/client": "^6.16.2",
     "csv-parse": "^6.1.0",
     "date-fns": "^4.1.0",
+    "lucide-react": "^0.544.0",
     "next": "15.5.2",
-    "prisma": "^6.15.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "recharts": "^3.1.2"
@@ -26,6 +26,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
+    "prisma": "^6.16.2",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
