--- a/package.json
+++ b/package.json
@@ -1,34 +1,40 @@
 {
   "name": "apartments",
-  "version": "0.1.0",
   "private": true,
+  "version": "0.1.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "next lint",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio",
+    "db:seed": "tsx scripts/seed.ts"
   },
   "dependencies": {
-    "@prisma/client": "^6.16.2",
-    "@supabase/supabase-js": "^2.58.0",
-    "csv-parse": "^6.1.0",
-    "date-fns": "^4.1.0",
-    "lucide-react": "^0.544.0",
+    "@swc/helpers": "^0.5.17",
+    "classnames": "^2.5.1",
+    "drizzle-orm": "^0.36.0",
+    "lucide-react": "^0.454.0",
     "next": "15.5.2",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "recharts": "^3.2.1"
+    "papaparse": "^5.5.3",
+    "pg": "^8.16.3",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
+    "@types/node": "^20.11.30",
+    "@types/pg": "^8.10.9",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "autoprefixer": "^10.4.19",
+    "drizzle-kit": "^0.27.0",
+    "eslint": "^8.57.0",
     "eslint-config-next": "15.5.2",
-    "prisma": "^6.16.2",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.10",
+    "tsx": "^4.19.0",
+    "typescript": "^5.6.3"
   }
 }
