--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "tsx tests/tenantStatement.test.ts",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
     "db:seed": "tsx scripts/seed.ts"
@@ -34,6 +35,7 @@
     "eslint-config-next": "15.5.2",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.10",
+    "ts-node": "^10.9.2",
     "tsx": "^4.19.0",
     "typescript": "^5.6.3"
   }
