--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "classnames": "^2.5.1",
     "drizzle-orm": "^0.36.0",
     "lucide-react": "^0.454.0",
-    "next": "15.5.2",
+    "next": "^16.0.7",
     "papaparse": "^5.5.3",
     "pg": "^8.16.3",
     "react": "18.3.1",
