--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
     "target": "ES2017",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": false,
     "skipLibCheck": true,
     "strict": true,
@@ -11,19 +15,41 @@
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "incremental": true,
-
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./*", "src/*"],
-      "@/components/*": ["components/*", "src/components/*"],
-      "@/lib/*": ["src/lib/*", "lib/*"],
-      "@/app/*": ["app/*"]
+      "@/*": [
+        "./*",
+        "src/*"
+      ],
+      "@/components/*": [
+        "components/*",
+        "src/components/*"
+      ],
+      "@/lib/*": [
+        "src/lib/*",
+        "lib/*"
+      ],
+      "@/app/*": [
+        "app/*"
+      ]
     },
-
-    "plugins": [{ "name": "next" }]
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/contacts and supplier/suppliers"],
-  "exclude": ["node_modules"]
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "app/contacts and supplier/suppliers",
+    ".next/dev/types/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
