--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
     "ts-node": "^10.9.2",
     "tsx": "^4.19.0",
     "typescript": "^5.6.3"
+  },
+  "engines": {
+    "node": ">=18 <21"
   }
 }
